--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@
 buildscript {
     ext {
         kotlin_version = '1.3.21'
-        rxpaparazzo_group = 'com.github.miguelbcr'
+        rxpaparazzo_group = 'com.github.owsega'
         rxpaparazzo_version = '0.7.0'
         min_sdk_version = 16
         sdk_version = 28
